src/yini_test/cases/golden/lenient/valid/numbers/digit-separator-in-hex.yini
@yini

^ Numbers
val = 0xFF_00_AA

