src/yini_test/cases/golden/lenient/invalid/numbers/malformed-underscore-double.yini
@yini

^ Numbers
val = 1__000

